--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">DragDropTest</string>
+    <string name="app_name">FlickerSearch</string>
     <string name="search_text">Search</string>
+    <string name="search_result_image">Search result image</string>
+    <string name="search_hint">Enter search string</string>
 </resources>
